--- a/las-vegas-history/history.html
+++ b/las-vegas-history/history.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="history.png" />
+    <link rel="icon" href="assets/history.png" />
   </head>
   <body>
     <h2>Las Vegas Historien</h2>
@@ -17,7 +17,7 @@
     <!-- Kontainer 1 -->
     <div class="container">
       <div class="sub-container">
-        <img src="assets/railroad.jpg" alt="History Image" />
+        <img src="assets/1905.jpg" alt="History Image" />
         <div class="content-container">
           <span>1905</span>
           <p class="date-underline"></p>
