changes in description

--- a/las-vegas-history/history.html
+++ b/las-vegas-history/history.html
@@ -52,11 +52,11 @@
           <span>1922</span>
           <p class="date-underline"></p>
           <p>
-            The Historic Westside School ble bygget i Historic West Las Vegas på
-            W. Washington Avenue og D Street. Bygningen var den første
-            grammatikkskolen i West Las Vegas og er det eldste gjenværende
-            skolehuset i Las Vegas. Skolen er oppført i byen Las Vegas Historic
-            Property Register, og det statlige og nasjonale registeret over
+            Den historiske Westside School ble bygget i Historic West Las Vegas
+            på W. Washington Avenue og D Street. Bygningen var den første
+            grunnskolen i West Las Vegas og er den eldste gjenværende
+            skolebygningen i Las Vegas. Skolen er oppført på Las Vegas Historic
+            Property Register, samt på delstatens og nasjonens register over
             historiske steder.
           </p>
         </div>
@@ -71,19 +71,20 @@
           <span>1931</span>
           <p class="date-underline"></p>
           <p>
-            Skilsmisselover ble liberalisert i Nevada, noe som gjorde bosted
-            lettere å oppnå. En "quickie" skilsmisse kan oppnås etter seks ukers
-            botid. Disse korttidsbeboerne bodde på dude-rancher, som jobbet på
-            rancher som tok inn betalende gjester for å få endene til å møtes.
-            Overlevende eksempler er lokalisert ved Floyd Lamb Park ved Tule
-            Springs. Den første spillelisensen i Nevada ble utstedt til Mayme
-            Stocker på Northern Club. Fra og med 1931 brakte byggingen av Hoover
-            Dam en tilstrømning av bygningsarbeidere, som startet en
-            befolkningsboom under den store depresjonen og ga dalens økonomi et
-            nødvendig løft. Las Vegas High School, nå Las Vegas Academy, ble
-            bygget ved S. Seventh Street og Bridger Avenue. Den overdådige
-            videregående skolen i art deco-stil er oppført i byen Las Vegas
-            Historic Property Register og National Register of Historic Places.
+            Scheidingslovene ble liberalisert i Nevada, noe som gjorde det
+            enklere å oppnå bosted. En "quickie" skilsmisse kunne oppnås etter
+            seks ukers bosted. Disse kortsiktige innbyggerne bodde på såkalte
+            "dude ranches", som var arbeidsrancher som tok inn betalende gjester
+            for å få endene til å møtes. Overlevende eksempler finnes i Floyd
+            Lamb Park ved Tule Springs. Den første spillelisensen i Nevada ble
+            utstedt til Mayme Stocker ved Northern Club. Fra 1931 brakte
+            byggingen av Hoover Dam en strøm av anleggsarbeidere, noe som
+            startet en befolkningsvekst under den store depresjonen og ga
+            økonomien i dalen et nødvendig løft. Las Vegas High School, nå kjent
+            som Las Vegas Academy, ble bygget ved S. Seventh Street og Bridger
+            Avenue. Den overdådige kunstdeco-stil skolen er oppført på Las Vegas
+            Historic Property Register og det nasjonale registeret over
+            historiske steder.
           </p>
         </div>
       </div>
@@ -109,8 +110,11 @@
           <span>1946</span>
           <p class="date-underline"></p>
           <p>
-            Fremont Street fra Main til Third Streets ble kåret til Glitter
-            Gulch av Las Vegas Chamber of Commerce.
+            Fremont Street er hjemmet til mange klassiske kasinoer som Golden
+            Nugget og Binion's Gambling Hall. Du vil finne et variert utvalg av
+            restauranter, barer, butikker og underholdningssteder langs Fremont
+            Street. Fremont Street fra Main til Third Streets ble kåret til
+            Glitter Gulch av Las Vegas Chamber of Commerce i 1946.
           </p>
         </div>
       </div>
@@ -124,12 +128,12 @@
           <span>1950</span>
           <p class="date-underline"></p>
           <p>
-            Tennessee-kongressmedlem Carey Estes Kefauver holdt høringer i
-            mobben ved det amerikanske postkontoret og tinghuset i sentrum av
-            Las Vegas. Denne historiske bygningen ved 300 Stewart Ave. er
-            fortsatt i bruk i dag og er hjemmet til The Mob Museum. Besøkende
-            kan lære om historien til organisert kriminalitet og de føderale
-            agentene som kjempet mot den i Las Vegas.
+            Tennessee-representanten Carey Estes Kefauver holdt høringer om
+            mafiaen ved det amerikanske postkontoret og rettsbygningen i sentrum
+            av Las Vegas. Den historiske bygningen på 300 Stewart Ave. er
+            fortsatt i bruk i dag og huser The Mob Museum. Besøkende kan lære om
+            historien til organisert kriminalitet og de føderale agentene som
+            kjempet mot det i Las Vegas.
           </p>
         </div>
       </div>
