added top btn and home btn to the history page

--- a/las-vegas-history/history.html
+++ b/las-vegas-history/history.html
@@ -13,7 +13,10 @@
   </head>
   <body>
     <h2>Las Vegas Historien</h2>
-
+    <!-- Hjem knappen -->
+    <div class="btn-container">
+      <a class="home-btn" href="/lasvegas.html">Hjem</a>
+    </div>
     <!-- Kontainer 1 -->
     <div class="container">
       <div class="sub-container">
@@ -215,6 +218,10 @@
           </p>
         </div>
       </div>
+    </div>
+
+    <div class="btn-container">
+      <a class="top-btn" href="/las-vegas-history/history.html">Til toppen</a>
     </div>
   </body>
 </html>
