fixed home link

--- a/las-vegas-history/history.html
+++ b/las-vegas-history/history.html
@@ -15,7 +15,7 @@
     <h2>Las Vegas Historien</h2>
     <!-- Hjem knappen -->
     <div class="btn-container">
-      <a class="home-btn" href="/lasvegas.html">Hjem</a>
+      <a class="home-btn" href="../lasvegas.html">Hjem</a>
     </div>
     <!-- Kontainer 1 -->
     <div class="container">
