--- a/las-vegas-history/history.html
+++ b/las-vegas-history/history.html
@@ -13,10 +13,12 @@
   </head>
   <body>
     <h2>Las Vegas Historien</h2>
+
     <!-- Hjem knappen -->
     <div class="btn-container">
       <a class="home-btn" href="../lasvegas.html">Hjem</a>
     </div>
+
     <!-- Kontainer 1 -->
     <div class="container">
       <div class="sub-container">
@@ -209,7 +211,7 @@
     </div>
 
     <div class="btn-container">
-      <a class="top-btn" href="/las-vegas-history/history.html">Til toppen</a>
+      <a class="top-btn" href="history.html">Til toppen</a>
     </div>
   </body>
 </html>
