--- a/las-vegas-history/history.html
+++ b/las-vegas-history/history.html
@@ -4,18 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Historie</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed&display=swap"
-      rel="stylesheet"
-    />
     <link rel="icon" href="assets/history.png" />
     <link rel="stylesheet" href="history.css" />
   </head>
   <body>
+    <!-- Hoved tittelen -->
     <h2>Las Vegas Historien</h2>
 
     <!-- Hjem knappen -->
-    <div class="btn-container">
+    <div id="btn-container">
       <a class="home-btn" href="../lasvegas.html">Hjem</a>
     </div>
 
@@ -210,7 +207,7 @@
       </div>
     </div>
 
-    <div class="btn-container">
+    <div id="btn-container">
       <a class="top-btn" href="history.html">Til toppen</a>
     </div>
   </body>
