added new files

--- a/lasvegas.html
+++ b/lasvegas.html
@@ -29,14 +29,18 @@
 
         <!-- Kontainer 2 -->
         <div class="container-2">
-          <p class="description-title">Utviklingen</p>
+          <p class="description-title">Utvikling</p>
           <p class="description">
             På 1980- og 1990-tallet gjennomgikk Las Vegas en diversifisering av
             økonomien, med fokus på konferanser, messer og familievennlig
             turisme. Dette bidro til ytterligere vekst og etablering av ikoniske
             hoteller og resorter.
           </p>
-          <a href="" class="description-btn">Utviklingen</a>
+          <a
+            href="/las-vegas-development/Utvikling.html"
+            class="description-btn"
+            >Utvikling</a
+          >
         </div>
         <hr />
 
@@ -49,7 +53,11 @@
             berømte "Strip" ble etablert, og byen begynte å tiltrekke seg kjente
             artister og show.
           </p>
-          <a href="" class="description-btn">Kasinoer</a>
+          <a
+            href="/las-vegas-entertainment/Gambling.html"
+            class="description-btn"
+            >Kasino</a
+          >
         </div>
         <hr />
 
@@ -61,7 +69,9 @@
             spenner fra store konferanser og messer til musikkfestivaler og
             sportsarrangementer.
           </p>
-          <a class="description-btn">Eventer</a>
+          <a href="/las-vegas-events/events.html" class="description-btn"
+            >Eventer</a
+          >
         </div>
       </div>
     </main>
