--- a/las-vegas-events/events.html
+++ b/las-vegas-events/events.html
@@ -4,66 +4,148 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Events In Las Vegas</title>
+    <link rel="icon" href="assets/events-icon.png" />
     <link rel="stylesheet" href="events.css" />
   </head>
   <body>
-    <div class="container1">
+    <h2>Las Vegas Eventer</h2>
+    <!-- Kontainer 1 med 3 sub kontainere -->
+    <div class="container">
       <div class="sub-container">
         <img src="assets/bruno_mars.jpg" alt="card-img" />
         <span class="date-section">DEC <span>22</span></span>
         <span class="catagory">POP/ROCK</span>
         <h3>Bruno Mars</h3>
         <p>
-          Feir nyttårsaften med rytmen og sjelen til Bruno Mars, klar til å
-          fengsle deg i en av Las Vegas' fineste forestillinger. Velg mellom
-          førsteklasses sitteplasser, unike forbedringer og luksuriøse
-          hotellinnkvarteringer designet for nyttårsaften. Begrenset lager er
-          tilgjengelig, så ikke gå glipp av sjansen din til å se alt i 24 karat
-          gull. Bestill nå!
+          Fjorten ganger Grammy-prisvinner og 30 ganger Grammy Award-nominert
+          Bruno Mars er en berømt sanger, låtskriver, produsent og musiker som
+          har solgt over 200 millioner singler over hele verden, noe som gjør
+          ham til en av de bestselgende artistene gjennom tidene. Mars
+          aksepterte Album Of The Year (An Evening with Silk Sonic) på vegne av
+          duoen, Silk Sonic, under BET Awards 2022. Tidligere feiret den 64.
+          årlige Grammy Awards, tok superduoen hjem fire priser, inkludert
+          Record Of The Year ("Leave The Door Open"), Song Of The Year ("Leave
+          The Door Open"), Beste R&B-opptreden ("Leave The Door") Open», og
+          beste R&B-sang ("Leave The Door Open"). Dette kom etter at «Leave The
+          Door Open» ble Mars 17. sang som nådde Multi-Platinum-status.
         </p>
         <a
           target="_blank"
-          href="https://parkmgm.mgmresorts.com/en/entertainment/bruno-mars.html"
+          href="https://www.visitlasvegas.com/event/bruno-mars/44743/"
           >Les mer</a
         >
       </div>
 
       <div class="sub-container">
-        <img src="assets/bruno_mars.jpg" alt="card-img" />
-        <span class="date-section">DEC <span>22</span></span>
+        <img src="assets/usher.jpg" alt="card-img" />
+        <span class="date-section">DEC <span>01</span></span>
         <span class="catagory">POP/ROCK</span>
-        <h3>Bruno Mars</h3>
+        <h3>Usher</h3>
         <p>
-          Feir nyttårsaften med rytmen og sjelen til Bruno Mars, klar til å
-          fengsle deg i en av Las Vegas' fineste forestillinger. Velg mellom
-          førsteklasses sitteplasser, unike forbedringer og luksuriøse
-          hotellinnkvarteringer designet for nyttårsaften. Begrenset lager er
-          tilgjengelig, så ikke gå glipp av sjansen din til å se alt i 24 karat
-          gull. Bestill nå!
+          Usher har endret musikk, kultur og utallige liv. Han har solgt mer enn
+          80 millioner plater over hele verden og samlet inn dusinvis av priser.
+          Han slynget fire påfølgende album til #1 på Billboard Topp 200, som
+          begynte med landemerket diamant-sertifiserte Confessions i 2004. Han
+          fortsatte å flytte grenser med en rekke singler og show før han setter
+          scenen for sitt niende fullengder-tilbud i 2022. Ikke gå glipp av å se
+          Usher på Dolby Live!
         </p>
         <a
           target="_blank"
-          href="https://parkmgm.mgmresorts.com/en/entertainment/bruno-mars.html"
+          href="https://www.visitlasvegas.com/event/usher/40941/"
           >Les mer</a
         >
       </div>
 
       <div class="sub-container">
-        <img src="assets/bruno_mars.jpg" alt="card-img" />
-        <span class="date-section">DEC <span>22</span></span>
-        <span class="catagory">POP/ROCK</span>
-        <h3>Bruno Mars</h3>
+        <img src="assets/wayne-newton.jpg" alt="card-img" />
+        <span class="date-section">DEC <span>02</span></span>
+        <span class="catagory">VARIETY</span>
+        <h3>Wayne Newton: Up Close & Personal</h3>
         <p>
-          Feir nyttårsaften med rytmen og sjelen til Bruno Mars, klar til å
-          fengsle deg i en av Las Vegas' fineste forestillinger. Velg mellom
-          førsteklasses sitteplasser, unike forbedringer og luksuriøse
-          hotellinnkvarteringer designet for nyttårsaften. Begrenset lager er
-          tilgjengelig, så ikke gå glipp av sjansen din til å se alt i 24 karat
-          gull. Bestill nå!
+          «Wayne: Up Close and Personal» presenterer underholderen i en intim
+          setting der han samhandler med publikum, fremfører noen favorittsanger
+          og deler personlige karrierehøydepunkter gjennom sanger, filmklipp,
+          anekdoter og spørsmål og svar fra publikum. Anerkjent og æret over
+          hele verden, er underholdningssuperstjernen Wayne Newton kjent for sin
+          ikoniske signatursang, "Danke Schoen" i tillegg til utallige andre
+          hitsingler inkludert, "Daddy, Don't You Walk So Fast," "Red Roses for
+          a Blue Lady," "At This Moment", "The Letter", "Summer Wind" og
+          "Years."
         </p>
         <a
           target="_blank"
-          href="https://parkmgm.mgmresorts.com/en/entertainment/bruno-mars.html"
+          href="https://www.visitlasvegas.com/event/wayne-newton%3a-up-close-%26-personal/40577/"
+          >Les mer</a
+        >
+      </div>
+    </div>
+
+    <!-- Kontainer 2 med 3 sub kontainere -->
+    <div style="margin-bottom: 2rem" class="container">
+      <div class="sub-container">
+        <img src="assets/absinthe.jpg" alt="card-img" />
+        <span class="date-section">DEC <span>01</span></span>
+        <span class="catagory">ADULT</span>
+        <h3>ABSINTHE</h3>
+        <p>
+          Et fantasifullt show i et unikt sted, ABSINTHE er kronjuvelen til
+          Spiegelworld-opplevelsen - et voksenkarneval som forvandler Roman
+          Plaza foran Caesars Palace til en underholdningslekeplass.
+          Spiegelworld lar festdeltakere ta en tur gjennom en fengslende
+          labyrint av telt og europeisk innredning fra begynnelsen av det 20.
+          århundre som huser et karneval for voksne, komplett med en hemmelig
+          speakeasy, hes ølhage og rampete drikkeleker, inkludert "Flip Stein"
+          og "Champagne Pong". Når kvelden nærmer seg, åpner denne fortryllende
+          verden seg for en intim setting for alle ABSINTHE-forestillinger, som
+          finner sted i det mesterlige midtpunktet Spiegeltent.
+          Publikumsmedlemmer blir fordypet i et intimt emporium der alle de
+          ville og merkelige handlingene til ABSINTHE utspiller seg i en
+          teater-i-runden-presentasjon.
+        </p>
+        <a
+          target="_blank"
+          href="https://www.visitlasvegas.com/event/absinthe/32404/"
+          >Les mer</a
+        >
+      </div>
+
+      <div class="sub-container">
+        <img src="assets/Awakening.jpg" alt="card-img" />
+        <span class="date-section">DEC <span>01</span></span>
+        <span class="catagory">PRODUCTION</span>
+        <h3>Awakening</h3>
+        <p>
+          Awakening inviterer publikum til å bli med på søken til en heltinne og
+          hennes to medreisende mens de prøver å gjenforene to tapte elskere.
+          Infundert med moderne myter og magi, våkner showet til liv gjennom en
+          kombinasjon av dramatisk koreografi, teknologi, fantastiske skapninger
+          og et tilpasset lydsystem designet for å vise frem dets fantastiske
+          originale partitur.
+        </p>
+        <a
+          target="_blank"
+          href="https://www.visitlasvegas.com/event/awakening/42891/"
+          >Les mer</a
+        >
+      </div>
+
+      <div class="sub-container">
+        <img src="assets/iLuminate.jpg" alt="card-img" />
+        <span class="date-section">DEC <span>01</span></span>
+        <span class="catagory">VARIETY</span>
+        <h3>iLuminate</h3>
+        <p>
+          Iluminates briljante rollebesetning av landets beste dansere og
+          koreografer, sammen med energisk musikk, skaper en fantastisk,
+          multisensorisk live show-opplevelse. iLuminate kan skryte av
+          tilpassede LED-dresser med trådløse lysprogrammer som skaper
+          ekstraordinære lyseffekter som beveger seg sammen med hvert av de
+          fenomenalt koreograferte dansebevegelsene.
+        </p>
+        <a
+          target="_blank"
+          href="https://www.visitlasvegas.com/event/iluminate/39789/"
           >Les mer</a
         >
       </div>
