--- a/las-vegas-history/history.html
+++ b/las-vegas-history/history.html
@@ -8,207 +8,213 @@
     <link rel="stylesheet" href="history.css" />
   </head>
   <body>
-    <!-- Hoved tittelen -->
-    <h2>Las Vegas Historien</h2>
+    <main>
+      <!-- Hoved tittel -->
+      <h2>Las Vegas Historien</h2>
 
-    <!-- Hjem knappen -->
-    <div id="btn-container">
-      <a class="home-btn" href="../lasvegas.html">Hjem</a>
-    </div>
+      <!-- Hjem knappen -->
+      <div id="btn-container">
+        <a class="home-btn" href="../lasvegas.html">Hjem</a>
+      </div>
 
-    <!-- Kontainer 1 -->
-    <div class="container">
-      <div class="sub-container">
-        <img src="assets/1905.jpg" alt="History Image" />
-        <div class="content-container">
-          <span>1905</span>
-          <p>
-            Las Vegas ble offisielt grunnlagt 15. mai 1905, da det ble holdt en
-            auksjon for salg av land, og byen ble etablert som et resultat av
-            jernbaneutviklingen. San Pedro, Los Angeles og Salt Lake City
-            Railroad spilte en avgjørende rolle i den tidlige veksten til byen
-            ved å lette transport og bidra til dens innledende utvikling.
-            Imidlertid forble Las Vegas en relativt liten og isolert samfunn.
-          </p>
+      <!-- Kontainer 1 -->
+      <div class="container">
+        <!-- Sub kontainer 1 -->
+        <div class="sub-container">
+          <img src="assets/1905.jpg" alt="History Image 1905" />
+          <div class="content-container">
+            <span>1905</span>
+            <p>
+              Las Vegas ble offisielt grunnlagt 15. mai 1905, da det ble holdt
+              en auksjon for salg av land, og byen ble etablert som et resultat
+              av jernbaneutviklingen. San Pedro, Los Angeles og Salt Lake City
+              Railroad spilte en avgjørende rolle i den tidlige veksten til byen
+              ved å lette transport og bidra til dens innledende utvikling.
+              Imidlertid forble Las Vegas en relativt liten og isolert samfunn.
+            </p>
+          </div>
+        </div>
+        <!-- Sub kontainer 2 -->
+        <div class="sub-container">
+          <img src="assets/1911.jpg" alt="History Image 1911" />
+          <div class="content-container">
+            <span>1911</span>
+            <p>
+              Las Vegas ble innlemmet 1. juni 1911. Den dagen gikk velgerne i
+              den ikke-inkorporerte byen Las Vegas til valgurnene og stemte på
+              spørsmålet om innlemmelse. Resultatene var 168 for innlemmelse og
+              57 mot. Las Vegas Age-forside - 3. juni 1911.
+            </p>
+          </div>
+        </div>
+        <!-- Sub kontainer 3-->
+        <div class="sub-container">
+          <img src="assets/1922.jpg" alt="History Image 1922" />
+          <div class="content-container">
+            <span>1922</span>
+            <p>
+              Den historiske Westside School ble bygget i Historic West Las
+              Vegas på W. Washington Avenue og D Street. Bygningen var den
+              første grunnskolen i West Las Vegas og er den eldste gjenværende
+              skolebygningen i Las Vegas. Skolen er oppført på Las Vegas
+              Historic Property Register, samt på delstatens og nasjonens
+              register over historiske steder.
+            </p>
+          </div>
         </div>
       </div>
 
-      <div class="sub-container">
-        <img src="assets/1911.jpg" alt="History Image" />
-        <div class="content-container">
-          <span>1911</span>
-          <p>
-            Las Vegas ble innlemmet 1. juni 1911. Den dagen gikk velgerne i den
-            ikke-inkorporerte byen Las Vegas til valgurnene og stemte på
-            spørsmålet om innlemmelse. Resultatene var 168 for innlemmelse og 57
-            mot. Las Vegas Age-forside - 3. juni 1911.
-          </p>
+      <!-- Kontainer 2 -->
+      <div class="container">
+        <!-- Sub kontainer 1 -->
+        <div class="sub-container">
+          <img src="assets/1931.jpg" alt="History Image 1931" />
+          <div class="content-container">
+            <span>1931</span>
+            <p>
+              Scheidingslovene ble liberalisert i Nevada, noe som gjorde det
+              enklere å oppnå bosted. En "quickie" skilsmisse kunne oppnås etter
+              seks ukers bosted. Disse kortsiktige innbyggerne bodde på såkalte
+              "dude ranches", som var arbeidsrancher som tok inn betalende
+              gjester for å få endene til å møtes. Overlevende eksempler finnes
+              i Floyd Lamb Park ved Tule Springs. Den første spillelisensen i
+              Nevada ble utstedt til Mayme Stocker ved Northern Club. Fra 1931
+              brakte byggingen av Hoover Dam en strøm av anleggsarbeidere, noe
+              som startet en befolkningsvekst under den store depresjonen og ga
+              økonomien i dalen et nødvendig løft. Las Vegas High School, nå
+              kjent som Las Vegas Academy, ble bygget ved S. Seventh Street og
+              Bridger Avenue. Den overdådige kunstdeco-stil skolen er oppført på
+              Las Vegas Historic Property Register og det nasjonale registeret
+              over historiske steder.
+            </p>
+          </div>
+        </div>
+        <!-- Sub kontainer 2 -->
+        <div class="sub-container">
+          <img src="assets/1941.jpg" alt="History Image 1941" />
+          <div class="content-container">
+            <span>1941</span>
+            <p>
+              Las Vegas Army Air Field (nå Nellis Air Force Base) ble bygget i
+              nordøst. El Rancho Vegas hotellcasino i westernstil ble det første
+              temaferiestedet på The Strip. Dette ble fulgt av The Last Frontier
+              (1942), Flamingo (1946) og Thunderbird (1948) hoteller og
+              kasinoer. På Fremont Street åpnet El Cortez hotellcasino.
+            </p>
+          </div>
+        </div>
+        <!-- Sub kontainer 3 -->
+        <div class="sub-container">
+          <img src="assets/1946.jpg" alt="History Image 1946" />
+          <div class="content-container">
+            <span>1946</span>
+            <p>
+              Fremont Street er hjemmet til mange klassiske kasinoer som Golden
+              Nugget og Binion's Gambling Hall. Du vil finne et variert utvalg
+              av restauranter, barer, butikker og underholdningssteder langs
+              Fremont Street. Fremont Street fra Main til Third Streets ble
+              kåret til Glitter Gulch av Las Vegas Chamber of Commerce i 1946.
+            </p>
+          </div>
         </div>
       </div>
 
-      <div class="sub-container">
-        <img src="assets/1922.jpg" alt="History Image" />
-        <div class="content-container">
-          <span>1922</span>
-          <p>
-            Den historiske Westside School ble bygget i Historic West Las Vegas
-            på W. Washington Avenue og D Street. Bygningen var den første
-            grunnskolen i West Las Vegas og er den eldste gjenværende
-            skolebygningen i Las Vegas. Skolen er oppført på Las Vegas Historic
-            Property Register, samt på delstatens og nasjonens register over
-            historiske steder.
-          </p>
+      <!-- Kontainer 3 -->
+      <div class="container">
+        <!-- Sub kontainer 1 -->
+        <div class="sub-container">
+          <img src="assets/1950.jpg" alt="History Image 1950" />
+          <div class="content-container">
+            <span>1950</span>
+            <p>
+              Tennessee-representanten Carey Estes Kefauver holdt høringer om
+              mafiaen ved det amerikanske postkontoret og rettsbygningen i
+              sentrum av Las Vegas. Den historiske bygningen på 300 Stewart Ave.
+              er fortsatt i bruk i dag og huser The Mob Museum. Besøkende kan
+              lære om historien til organisert kriminalitet og de føderale
+              agentene som kjempet mot det i Las Vegas.
+            </p>
+          </div>
         </div>
-      </div>
-    </div>
-
-    <!-- Kontainer 2 -->
-    <div class="container">
-      <div class="sub-container">
-        <img src="assets/1931.jpg" alt="History Image" />
-        <div class="content-container">
-          <span>1931</span>
-          <p>
-            Scheidingslovene ble liberalisert i Nevada, noe som gjorde det
-            enklere å oppnå bosted. En "quickie" skilsmisse kunne oppnås etter
-            seks ukers bosted. Disse kortsiktige innbyggerne bodde på såkalte
-            "dude ranches", som var arbeidsrancher som tok inn betalende gjester
-            for å få endene til å møtes. Overlevende eksempler finnes i Floyd
-            Lamb Park ved Tule Springs. Den første spillelisensen i Nevada ble
-            utstedt til Mayme Stocker ved Northern Club. Fra 1931 brakte
-            byggingen av Hoover Dam en strøm av anleggsarbeidere, noe som
-            startet en befolkningsvekst under den store depresjonen og ga
-            økonomien i dalen et nødvendig løft. Las Vegas High School, nå kjent
-            som Las Vegas Academy, ble bygget ved S. Seventh Street og Bridger
-            Avenue. Den overdådige kunstdeco-stil skolen er oppført på Las Vegas
-            Historic Property Register og det nasjonale registeret over
-            historiske steder.
-          </p>
+        <!-- Sub kontainer 2 -->
+        <div class="sub-container">
+          <img src="assets/1966.jpg" alt="History Image 1966" />
+          <div class="content-container">
+            <span>1966</span>
+            <p>
+              Både på Fremont Street og The Strip drev hoteller og kasinoer med
+              ansiktsløftninger, ombygginger og tillegg i flere etasjer. Howard
+              Hughes begynte en kjøpsrunde av hoteller i Las Vegas og andre
+              virksomheter. Hans tilstedeværelse bidro til å bane vei for
+              selskapets eierskap av hotell-kasinoer som fulgte.
+            </p>
+          </div>
         </div>
-      </div>
-
-      <div class="sub-container">
-        <img src="assets/1941.jpg" alt="History Image" />
-        <div class="content-container">
-          <span>1941</span>
-          <p>
-            Las Vegas Army Air Field (nå Nellis Air Force Base) ble bygget i
-            nordøst. El Rancho Vegas hotellcasino i westernstil ble det første
-            temaferiestedet på The Strip. Dette ble fulgt av The Last Frontier
-            (1942), Flamingo (1946) og Thunderbird (1948) hoteller og kasinoer.
-            På Fremont Street åpnet El Cortez hotellcasino.
-          </p>
+        <!-- Sub kontainer 3 -->
+        <div class="sub-container">
+          <img src="assets/1985.jpg" alt="History Image 1985" />
+          <div class="content-container">
+            <span>1985</span>
+            <p>
+              Fra midten av 1980-tallet begynte en periode med enestående vekst.
+              Årlige befolkningsøkninger på i gjennomsnitt nesten syv prosent
+              førte til at byens befolkning nesten ble doblet mellom 1985 og
+              1995, og økte 97,6 prosent fra 186 380 til 368 360.
+            </p>
+          </div>
         </div>
       </div>
 
-      <div class="sub-container">
-        <img src="assets/1946.jpg" alt="History Image" />
-        <div class="content-container">
-          <span>1946</span>
-          <p>
-            Fremont Street er hjemmet til mange klassiske kasinoer som Golden
-            Nugget og Binion's Gambling Hall. Du vil finne et variert utvalg av
-            restauranter, barer, butikker og underholdningssteder langs Fremont
-            Street. Fremont Street fra Main til Third Streets ble kåret til
-            Glitter Gulch av Las Vegas Chamber of Commerce i 1946.
-          </p>
+      <!-- Kontainer 4 -->
+      <div class="container">
+        <!-- Sub kontainer 1 -->
+        <div class="sub-container">
+          <img src="assets/1995.jpg" alt="History Image 1995" />
+          <div class="content-container">
+            <span>1995</span>
+            <p>
+              Fremont Street Experience åpnet. Baldakinen på 70 millioner dollar
+              over Fremont Street gir besøkende et spektakulært lys- og lydshow.
+              Denne skapelsen gjorde også slutt på biltrafikken på gaten der
+              tenåringer cruiset på 1940- og 1950-tallet.
+            </p>
+          </div>
+        </div>
+        <!-- Sub kontainer 2 -->
+        <div class="sub-container">
+          <img src="assets/2007.jpg" alt="History Image 2007" />
+          <div class="content-container">
+            <span>2007</span>
+            <p>
+              Området med tre blokker kjent som Fremont East Entertainment
+              District åpnet. Som en del av revitaliseringsarbeidet i sentrum,
+              bidro byens Redevelopment Agency med midler til denne renoveringen
+              i et forsøk på å tiltrekke flere nattklubber uten spill,
+              cocktailsalonger og underholdningssteder til området.
+            </p>
+          </div>
+        </div>
+        <!-- Sub kontainer 3 -->
+        <div class="sub-container">
+          <img src="assets/2012.jpg" alt="History Image 2012" />
+          <div class="content-container">
+            <span>2012</span>
+            <p>
+              National Museum of Organized Crime and Law Enforcement åpnet inne
+              i det tidligere amerikanske postkontoret og tinghuset som ligger
+              på 300 Stewart Ave. Det nye rådhuset, som ligger på 495 S. Main
+              St., åpnet for virksomhet i sentrum av Las Vegas, og forlot den
+              forrige byen Hall tilgjengelig for utvikling av Zappos.com. Smith
+              Center for Performing Arts åpnet med Broadway-produksjoner,
+              konserter og et hjem for kultur i Las Vegas.
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-
-    <!-- Kontainer 3 -->
-    <div class="container">
-      <div class="sub-container">
-        <img src="assets/1950.jpg" alt="History Image" />
-        <div class="content-container">
-          <span>1950</span>
-          <p>
-            Tennessee-representanten Carey Estes Kefauver holdt høringer om
-            mafiaen ved det amerikanske postkontoret og rettsbygningen i sentrum
-            av Las Vegas. Den historiske bygningen på 300 Stewart Ave. er
-            fortsatt i bruk i dag og huser The Mob Museum. Besøkende kan lære om
-            historien til organisert kriminalitet og de føderale agentene som
-            kjempet mot det i Las Vegas.
-          </p>
-        </div>
+      <!-- Til topp knappen -->
+      <div id="btn-container">
+        <a class="top-btn" href="history.html">Til toppen</a>
       </div>
-
-      <div class="sub-container">
-        <img src="assets/1966.jpg" alt="History Image" />
-        <div class="content-container">
-          <span>1966</span>
-          <p>
-            Både på Fremont Street og The Strip drev hoteller og kasinoer med
-            ansiktsløftninger, ombygginger og tillegg i flere etasjer. Howard
-            Hughes begynte en kjøpsrunde av hoteller i Las Vegas og andre
-            virksomheter. Hans tilstedeværelse bidro til å bane vei for
-            selskapets eierskap av hotell-kasinoer som fulgte.
-          </p>
-        </div>
-      </div>
-
-      <div class="sub-container">
-        <img src="assets/1985.jpg" alt="History Image" />
-        <div class="content-container">
-          <span>1985</span>
-          <p>
-            Fra midten av 1980-tallet begynte en periode med enestående vekst.
-            Årlige befolkningsøkninger på i gjennomsnitt nesten syv prosent
-            førte til at byens befolkning nesten ble doblet mellom 1985 og 1995,
-            og økte 97,6 prosent fra 186 380 til 368 360.
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Kontainer 4 -->
-    <div class="container">
-      <div class="sub-container">
-        <img src="assets/1995.jpg" alt="History Image" />
-        <div class="content-container">
-          <span>1995</span>
-          <p>
-            Fremont Street Experience åpnet. Baldakinen på 70 millioner dollar
-            over Fremont Street gir besøkende et spektakulært lys- og lydshow.
-            Denne skapelsen gjorde også slutt på biltrafikken på gaten der
-            tenåringer cruiset på 1940- og 1950-tallet.
-          </p>
-        </div>
-      </div>
-
-      <div class="sub-container">
-        <img src="assets/2007.jpg" alt="History Image" />
-        <div class="content-container">
-          <span>2007</span>
-          <p>
-            Området med tre blokker kjent som Fremont East Entertainment
-            District åpnet. Som en del av revitaliseringsarbeidet i sentrum,
-            bidro byens Redevelopment Agency med midler til denne renoveringen i
-            et forsøk på å tiltrekke flere nattklubber uten spill,
-            cocktailsalonger og underholdningssteder til området.
-          </p>
-        </div>
-      </div>
-
-      <div class="sub-container">
-        <img src="assets/2012.jpg" alt="History Image" />
-        <div class="content-container">
-          <span>2012</span>
-          <p>
-            National Museum of Organized Crime and Law Enforcement åpnet inne i
-            det tidligere amerikanske postkontoret og tinghuset som ligger på
-            300 Stewart Ave. Det nye rådhuset, som ligger på 495 S. Main St.,
-            åpnet for virksomhet i sentrum av Las Vegas, og forlot den forrige
-            byen Hall tilgjengelig for utvikling av Zappos.com. Smith Center for
-            Performing Arts åpnet med Broadway-produksjoner, konserter og et
-            hjem for kultur i Las Vegas.
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div id="btn-container">
-      <a class="top-btn" href="history.html">Til toppen</a>
-    </div>
+    </main>
   </body>
 </html>
